--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"dev:vault": "node esbuild.config.mjs vault",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"lint": "eslint .",
+		"lint": "eslint . --max-warnings 0",
 		"lint:css": "bash scripts/check-css-classes.sh",
 		"test": "vitest run",
 		"test:watch": "vitest"
